--- a/exercise1.html
+++ b/exercise1.html
@@ -25,7 +25,7 @@
     </tr>
 </table>
 
-<table class="table2" border="0">
+<table class="table2" width="100%" border="0">
     <tr>
         <td style="font:Arial;font-size:16px;color:#3d3d3d;" colspan="2">
             <h1>The roads that brought us here</h1>
