--- a/exercise3.html
+++ b/exercise3.html
@@ -9,6 +9,40 @@
     </style>
 </head>
 <body>
+    <div class="navbar">
+        <a href="https://schulich.ucalgary.ca/">
+        <div class="navbardropdown">
+            <button class="dropdownbutton">
+                SCHULICH School of Engineering
+            </button>
+            <div class="dropdowncontent">
+                <p>Home</p>
+                <p>About</p>
+                <p>Research</p>
+            </div>
+        </div>
+        </a>
+        <a href="https://www.ucalgary.ca/future-students/undergraduate/explore-programs/electrical-engineering">
+            <div class="navbaritem">
+                Electrical Engineering Department
+            </div>
+        </a>
+        <a href="https://schulich.ucalgary.ca/chemical-petroleum/home">
+            <div class="navbaritem">
+                Chemical Engineering Department
+            </div>
+        </a>
+        <a href="https://schulich.ucalgary.ca/biomedical/home">
+            <div class="navbaritem">
+                Biomedical Engineering Department
+            </div>
+        </a>
+        <a href="https://schulich.ucalgary.ca/geomatics">
+            <div class="navbaritem">
+                Department of Geomatics Engineering
+            </div>
+        </a>
+    </div>
 
      <div class="Container">
         <div class="item">
@@ -32,7 +66,7 @@
             <p>Engineering solutions for health and medicine.</p>
         </div>
         <div class="item">
-            <img src="geomatics_eng.jpeg" alt="Item 5 Image">
+            <img src="geomatics_eng.jpeg" alt="Item 5 Image">         
             <h3>Department of Geomatics Engineering</h3>
             <p>Mapping and analyzing the world around us.</p>
         </div>
