--- a/exercise3.html
+++ b/exercise3.html
@@ -12,13 +12,13 @@
     <div class="navbar">
         <a href="https://schulich.ucalgary.ca/">
         <div class="navbardropdown">
-            <button class="dropdownbutton">
                 SCHULICH School of Engineering
-            </button>
             <div class="dropdowncontent">
-                <p>Home</p>
-                <p>About</p>
-                <p>Research</p>
+                <span>Home</span>
+                <hr>
+                <span>About</span>
+                <hr>
+                <span>Research</span>
             </div>
         </div>
         </a>
